another fix for navbar- brand button was covered by primary menu

--- a/tapas_redesign/assets/sass/templates/navbar.scss
+++ b/tapas_redesign/assets/sass/templates/navbar.scss
@@ -1,5 +1,6 @@
 #block-menu-menu-primary-menu{
   margin-bottom:0;
+  float:left;
   .menu.nav{
     @extend .navbar-nav;
   }
